common/cf-template-pprotein.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation for pprotein

Parameters:
  VpcId:
    Description: "AWS EC2 VPC ID"
    Type: AWS::EC2::VPC::Id
  SubnetId:
    Description: "AWS EC2 Subnet ID"
    Type: AWS::EC2::Subnet::Id
  # GitHubUsername:
  #   Description: "GitHub Username for SSH public key"
  #   Type: String
  ImageId:
    Description: "Image ID (ami-xxxx) of the EC2 instance"
    Type: String
  InstanceType:
    Description: "Instance Type of the EC2 instance"
    Type: String
    Default: "c5.large"
  InstanceName:
    Description: "Instance Name of the EC2 instance"
    Type: String
    Default: "isuconXX-qualify-pprotein"

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Security Group for ISUCON13 Final pprotein
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: udp
          FromPort: "53"
          ToPort: "53"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: -1
          CidrIp: "192.168.0.0/24"
        # for pprotein
        - IpProtocol: tcp
          FromPort: 9000
          ToPort: 9000
          CidrIp: 0.0.0.0/0
        # for ansible
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          CidrIp: 0.0.0.0/0
        # for jaeger
        - IpProtocol: tcp
          FromPort: 16686
          ToPort: 16686
          CidrIp: 0.0.0.0/0
  PproteinInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref SubnetId
      PrivateIpAddress: "192.168.0.100"
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 40
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: !Ref InstanceName
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          github_usernames=(
            "itohdak"
            "Kotaro7750"
            "yakenji"
          )
          mkdir -p /home/isucon/.ssh
          for github_username in "${!github_usernames[@]}"; do
            curl -s https://github.com/$github_username.keys >> /home/isucon/.ssh/authorized_keys
          done
          chown -R isucon:isucon /home/isucon/.ssh
          chmod 600 /home/isucon/.ssh/authorized_keys
  PproteinInstanceIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref PproteinInstance
